@@ -4,6 +4,10 @@ import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
 /**
+ * -Xms96m -Xmx96m -Xmn40m -XX:+PrintGCDetails -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=C:\Users\ZhangShaowei\Desktop\dump -XX:-UseAdaptiveSizePolicy -XX:SurvivorRatio=8 -XX:InitialSurvivorRatio=8
+ *
+ *  -XX:+UseConcMarkSweepGC
+ *
  * @author ZhangShaowei on 2019/3/8 9:57
  **/
 @SpringBootApplication
